--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.12.2",
     "axios": "^0.26.0",
+    "bootstrap": "^5.3.2",
     "firebase": "^9.6.7",
     "newrelic": "^10.5.0",
     "react": "^17.0.2",
