--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "myserver"]
-	path = myserver
-	url = https://github.com/pedmanuel/lordbless.git
+[submodule "brimax"]
+	path = brimax
+	url = https://github.com/pedmanuel/brimaxx.git
