--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "myserver"]
 	path = myserver
 	url = https://github.com/pedmanuel/lordbless.git
+
+path "brimax"
+url https://github.com/pedromanuelf/brimax.git
