--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 
 [submodule "brimax"]	
 path = "brimax"
-url = https://github.com/pedromanuelf/brimax.git
+url = https://github.com/pedromanuel/brimax.git
